@@ -1,0 +1,6 @@
+NaoType = [
+# Type 0 (Standard Nao)
+{'tl' => 0.1},
+# Type 1
+{'tl' => 0.12}
+]
